# GEOMAR-ERC

./: .dockerignore  Dockerfile  Dockerfile.selenium  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: helper_functions.py  streamlit.py  updated_grantees_and_panel_member.xlsx
archive/: ORCIDClient_backup.py  PdfMemberExtractor_v0.py  RandomFirefoxProfile_backup.py  ResearchGateSelenium_backup.py  streamlit_backup.py
components/: ExcelPanelMemberExtractor.py  PdfChairExtractor.py  PdfExtractor.py  PdfMemberExtractor.py  __init__.py  pdf_test.py
config/: panel_dict.conf
data/: 2025_03_31_AdG_grantees_and_panel_members_GEOMAR-relevant-panels_EZ.xlsx  4_GEOMAR-relevant_COG_grantees_and_panel_members_2013-2024.xlsx  4_GEOMAR-relevant_STG_grantees_and_panel_members_2013-2024.xlsx  ERC_2024_panel_members_chairs.csv  List of funded projects(armUGTS).xlsx  panel-members-excel.xls
data/output/: ERC_2024_panel_members_chairs.csv  ERC_2025_panel_members.csv  ERC_2026_panel_chairs.csv  erc_panel_members.csv  erc_panel_members_2023.xlsx
notebooks/: adg.ipynb  google.ipynb  marking_contious_members.ipynb  research_fields.csv  scholar_cache.db  selenium.ipynb  test.ipynb  test2.ipynb  test_extracting_data_pdf.ipynb  test_get_informations.ipynb  test_merge_dashbaord_grantees.ipynb  test_transformer.ipynb
scripts/: extract_data_pdf.py  extracting_members_chairs_from_pdf.py  streamlit.py  test.py  updated_grantees_and_panel_member.xlsx
