[project]
name = "geomar-erc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "nameparser>=1.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "tabula-py>=2.10.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
[tool.setuptools]
packages = ["components", "scripts"]
