[project]
name = "geomar-erc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.6.1",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.0.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "nameparser>=1.1.3",
    "ollama>=0.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer-six>=20250506",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "scholarly>=1.7.11",
    "streamlit>=1.51.0",
    "tabula-py>=2.10.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "watchdog>=6.0.0",
    "wikipedia-api>=0.8.1",
]
[tool.setuptools]
packages = ["components", "scripts"]
